--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 <html>
 	<head>
 		<title>my epic website </title>
@@ -7,29 +8,32 @@
 	<body>
 		<header>
 			<h1>SI Base Units Summary</h1>
-			<a href="https://www.nist.gov/pml/owm/metric-si/si-units" target="_blank">Offical SI Units website</a>
-			<br>
-			<br>
-			<a href="history_si.html">History of SI Base Units</a>	
-			<br>
-			<img width = "500" src="cute_cat.jpeg" alt="cute cat bro, is it yours?"/>
+			<h2>List of links avaliable</h2>
+			<ol type="a">
+				<li>
+
+<a href="https://www.nist.gov/pml/owm/metric-si/si-units" target="_blank">Offical SI Units website</a> 
+
+
+				</li>
+				<li>
+				<a href="history_si.html">History of SI Base Units</a>	</li>
+			</ol>
+			<img width = "500" height="332" src="cute_cat.jpeg" alt="cute cat bro, is it yours?"/>
 		</header>
 		<hr>
 		<main>
-			<h2>Time:</h2>
-			<br>
-			<h2>Length:</h2>
-			<br>
-			<h2>Mass:</h2>
-			<br>
-			<h2>Electrical Current:</h2>
-			<br>
-			<h2>Temperature:</h2>
-			<br>
-			<h2>Amount of Substance:</h2>
-			<br>
-			<h2>Luminous Intensity:</h2>
+		<h1>List of SI Base Units </h1>
+		<ul>
+			<li>	<h2>Time:</h2> </li>
+			<li>	<h2>Length:</h2> </li>
+			<li>	<h2>Mass:</h2> </li>
+			<li>	<h2>Electrical Current:</h2> </li>
+			<li>	<h2>Temperature:</h2> </li>
+			<li>	<h2>Amount of Substance:</h2> </li>
+			<li>	<h2>Luminous Intensity:</h2> </li>
 
+		</ul>
 		</main>
 		<footer>
 
