Learned about divs and spans today

--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 
 				</li>
 				<li>
-				<a href="history_si.html">History of SI Base Units</a>	</li>
+				<a href="history_si.html">History of SI Base Units</a>
+
+
+				</li>
 			</ol>
 			<img width = "500" height="332" src="cute_cat.jpeg" alt="cute cat bro, is it yours?"/>
 		</header>
 		<hr>
 		<main>
-		<h1>List of SI Base Units </h1>
-		<ul>
-			<li>	<h2>Time:</h2> </li>
-			<li>	<h2>Length:</h2> </li>
-			<li>	<h2>Mass:</h2> </li>
-			<li>	<h2>Electrical Current:</h2> </li>
-			<li>	<h2>Temperature:</h2> </li>
-			<li>	<h2>Amount of Substance:</h2> </li>
-			<li>	<h2>Luminous Intensity:</h2> </li>
-
-		</ul>
+		<caption><h2>List of all SI Base Units </h2></caption>
+		<div>
+		time:
+		length:
+		mass:
+		electrical current:
+		temperature:
+		amount of substance:
+		Luminous Intensity:
+		</div>
 		</main>
 		<footer>
 
