Just started my Pearsonal Portfolio project for Computer Science

--- a/index.html
+++ b/index.html
@@ -1,44 +1,11 @@
 <!DOCTYPE html>
-
-
 <html>
 	<head>
-		<title>my epic website </title>
+		<title>Personal Portfolio</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<header>
-			<h1>SI Base Units Summary</h1>
-			<h2>List of links avaliable</h2>
-			<ol type="a">
-				<li>
-
-<a href="https://www.nist.gov/pml/owm/metric-si/si-units" target="_blank">Offical SI Units website</a> 
-
-
-				</li>
-				<li>
-				<a href="history_si.html">History of SI Base Units</a>
-
-
-				</li>
-			</ol>
-			<img width = "500" height="332" src="cute_cat.jpeg" alt="cute cat bro, is it yours?"/>
-		</header>
-		<hr>
-		<main>
-		<caption><h2>List of all SI Base Units </h2></caption>
-		<div>
-		time:
-		length:
-		mass:
-		electrical current:
-		temperature:
-		amount of substance:
-		Luminous Intensity:
-		</div>
-		</main>
-		<footer>
-
-		</footer>
+		<h1>Portfolio for Computer Science</h1>
+		<p>Good morning, afternoon and evening. My name is Heera Bachada and I have a passion for Computer Science.</p>
 	</body>
 </html>
