--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
 	</head>
 	<body>
 		<h1>Portfolio for Computer Science</h1>
-		<p>Good morning, afternoon and evening. My name is Heera Bachada and I have a passion for Computer Science.</p>
+		<h2 id="introduction">A Short Introduction about Myself</h2>
+		<p>Hello. My name is Heera Bachada and I have been interested in Computer Science for a number of years now.
+		</p>
+		<p>
+		When I was doing GCSEs, I first learnt the programming language of Python. I was immediately enamoured with programming
+		and its fundamental principlies of Abstraction and Decomposition. The satisfaction of solving a programming problem was quick and enjoyable for me. 
+		</p>
+		<p>
+		Since beginning my A-level Computer Science course, I have started to delve into web development and the beauties of frontend and backend development. I can not wait until I learn more about
+		these programming topics and sub topics, like Databases, Stacks and Data Structures and Algorithms.
+		</p>
+		<h2 id="job">Current, aspiring job prospects</h2>
+		<h3 id="job_title">Desired Job Title</h3>
+		<ul>
+			<li>Full Stack Developer (focused on both Frontend and Backend development on the Web).</li>
+		</ul>
+		<h3 id="job_technologies">Current Technologies Learnt</h3>
+		<a href="Technologies_learnt.html">Current Technologies Learnt</a>
+		<h3 id="job_qualifications">Current Qualifications</h3>
+		<a href="Current_Qualifications.html">Qualifications link</a>
+		<h2 id="Web_Projects">A Comprehensive List of Web Development Projects</h2>
+		<a href="Web_dev_projects.html">Projects link</a>
+		<h2 id="Work_Experience">Computing Work Experience:</h2>
+		<h2 id="personal_statement">Personal Statement:</h2>
+		<h2 id="cover_letter">Cover letter:</h2>
 	</body>
 </html>
