finished Portfolio work for now, currently learning js

--- a/Comp_Work_Experience.html
+++ b/Comp_Work_Experience.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title>Work Experiences</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<h1>Work Experience goes here</h1>
 	</body>
 </html>
