--- a/Personal_Statement.html
+++ b/Personal_Statement.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>A-level Qualifications</title>
+		<title>Personal Statement</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>A-level Qualifications goes here</h1>
+		<h1>Personal Statement goes here</h1>
 	</body>
 </html>
