--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 		<h2 id="Web_Projects">A Comprehensive List of Web Development Projects</h2>
 		<a href="Web_dev_projects.html">Projects link</a>
 		<h2 id="Work_Experience">Computing Work Experience:</h2>
+		<a href="Comp_Work_Experience.html">Work experience</a>
 		<h2 id="personal_statement">Personal Statement:</h2>
+		<a href="Personal_Statement.html">Personal Statement</a>
 		<h2 id="cover_letter">Cover letter:</h2>
+		<a href="Cover_Letter.html">Cover Letter</a>
 	</body>
 </html>
