--- a/Current_Qualifications.html
+++ b/Current_Qualifications.html
@@ -7,5 +7,7 @@
 	<body>
 		<h1>GCSEs</h1>
 		<a href="GCSEs.html">GCSEs Qualifications</a>
+		<h1>A-levels</h1>
+		<a href="A-levels.html">A level Qualifications</a>
 	</body>
 </html>
