started web calculator app, just finished operations (+,-,times,divide,equal)

--- a/index.html
+++ b/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Personal Portfolio</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="main.js"></script>
 	</head>
 	<body>
-		<h1>Portfolio for Computer Science</h1>
-		<h2 id="introduction">A Short Introduction about Myself</h2>
-		<p>Hello. My name is Heera Bachada and I have been interested in Computer Science for a number of years now.
-		</p>
-		<p>
-		When I was doing GCSEs, I first learnt the programming language of Python. I was immediately enamoured with programming
-		and its fundamental principlies of Abstraction and Decomposition. The satisfaction of solving a programming problem was quick and enjoyable for me. 
-		</p>
-		<p>
-		Since beginning my A-level Computer Science course, I have started to delve into web development and the beauties of frontend and backend development. I can not wait until I learn more about
-		these programming topics and sub topics, like Databases, Stacks and Data Structures and Algorithms.
-		</p>
-		<h2 id="job">Current, aspiring job prospects</h2>
-		<h3 id="job_title">Desired Job Title</h3>
-		<ul>
-			<li>Full Stack Developer (focused on both Frontend and Backend development on the Web).</li>
-		</ul>
-		<h3 id="job_technologies">Current Technologies Learnt</h3>
-		<a href="Technologies_learnt.html">Current Technologies Learnt</a>
-		<h3 id="job_qualifications">Current Qualifications</h3>
-		<a href="Current_Qualifications.html">Qualifications link</a>
-		<h2 id="Web_Projects">A Comprehensive List of Web Development Projects</h2>
-		<a href="Web_dev_projects.html">Projects link</a>
-		<h2 id="Work_Experience">Computing Work Experience:</h2>
-		<a href="Comp_Work_Experience.html">Work experience</a>
-		<h2 id="personal_statement">Personal Statement:</h2>
-		<a href="Personal_Statement.html">Personal Statement</a>
-		<h2 id="cover_letter">Cover letter:</h2>
-		<a href="Cover_Letter.html">Cover Letter</a>
+		<div id="spacing">
+			<button class="op_buttons"><h1 class="operations">+</h1></button>		
+			<button class="op_buttons"><h1 class="operations">-</h1></button>	
+			<button class="op_buttons"><h1>Multiply</h1></button>	
+			<button class="op_buttons"><h1 class="operations">Divide</h1></button>
+			<button class="op_buttons"><h1 class="operations">=</h1></button>
+		</div>
 	</body>
 </html>
