Add two numbered rows to calculator. Very proud!

--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
 		<script src="main.js"></script>
 	</head>
 	<body>
-		<div id="spacing">
+	<div id="operation_spacing">
 			<button class="op_buttons"><h1 class="operations">+</h1></button>		
 			<button class="op_buttons"><h1 class="operations">-</h1></button>	
-			<button class="op_buttons"><h1>Multiply</h1></button>	
+			<button class="op_buttons" id="Multiply"><h1>Multiply</h1></button>	
 			<button class="op_buttons"><h1 class="operations">Divide</h1></button>
 			<button class="op_buttons"><h1 class="operations">=</h1></button>
-		</div>
+	</div>
+	<div id="space_9">
+		<button class="num_buttons"><h1 class="nums">9</h1></button>
+	</div>
+	<div id="space_8">
+		<button class="num_buttons"><h1 class="nums">8</h1></button>
+	</div>
+	<div id="space_7">
+		<button class="num_buttons"><h1 class="nums">7</h1></button>
+	</div>
+	<div id="space_6">
+		<button class="num_buttons"><h1 class="nums">6</h1></button>
+	</div>
+	<div id="space_5">
+		<button class="num_buttons"><h1 class="nums">5</h1></button>
+	</div>
+	<div id="space_4">
+		<button class="num_buttons"><h1 class="nums">4</h1></button>
+	</div>
+	
 	</body>
 </html>
