just finished the number row for calculator

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="main.js"></script>
 	</head>
 	<body>
+
 	<div id="operation_spacing">
 			<button class="op_buttons"><h1 class="operations">+</h1></button>		
 			<button class="op_buttons"><h1 class="operations">-</h1></button>	
@@ -29,6 +30,15 @@
 	</div>
 	<div id="space_4">
 		<button class="num_buttons"><h1 class="nums">4</h1></button>
+	</div>
+	<div id="space_3">
+		<button class="num_buttons"><h1 class="nums">3</h1></button>
+	</div>
+	<div id="space_2">
+		<button class="num_buttons"><h1 class="nums">2</h1></button>
+	</div>
+	<div id="space_1">
+		<button class="num_buttons"><h1 class="nums">1</h1></button>
 	</div>
 	
 	</body>
