new branch created for centering divs and use columns

--- a/index.html
+++ b/index.html
@@ -5,41 +5,11 @@
 		<script src="main.js"></script>
 	</head>
 	<body>
-
-	<div id="operation_spacing">
-			<button class="op_buttons"><h1 class="operations">+</h1></button>		
-			<button class="op_buttons"><h1 class="operations">-</h1></button>	
-			<button class="op_buttons" id="Multiply"><h1>Multiply</h1></button>	
-			<button class="op_buttons"><h1 class="operations">Divide</h1></button>
-			<button class="op_buttons"><h1 class="operations">=</h1></button>
-	</div>
-	<div id="space_9">
-		<button class="num_buttons"><h1 class="nums">9</h1></button>
-	</div>
-	<div id="space_8">
-		<button class="num_buttons"><h1 class="nums">8</h1></button>
-	</div>
-	<div id="space_7">
-		<button class="num_buttons"><h1 class="nums">7</h1></button>
-	</div>
-	<div id="space_6">
-		<button class="num_buttons"><h1 class="nums">6</h1></button>
-	</div>
-	<div id="space_5">
-		<button class="num_buttons"><h1 class="nums">5</h1></button>
-	</div>
-	<div id="space_4">
-		<button class="num_buttons"><h1 class="nums">4</h1></button>
-	</div>
-	<div id="space_3">
-		<button class="num_buttons"><h1 class="nums">3</h1></button>
-	</div>
-	<div id="space_2">
-		<button class="num_buttons"><h1 class="nums">2</h1></button>
-	</div>
-	<div id="space_1">
-		<button class="num_buttons"><h1 class="nums">1</h1></button>
-	</div>
-	
+		<div id="calculator">
+			<button class="operations"> + </button>
+			<button class="operations"> - </button>
+			<button class="operations"> * </button>
+			<button class="operations"> / </button>
+		</div>
 	</body>
 </html>
