moved operations column slightly right of the center, and create new number row

--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 	</head>
 	<body>
 		<div id="calculator">
-			<button class="operations"> + </button>
+
+			<button class="operations" id="add"> + </button>
 			<button class="operations"> - </button>
 			<button class="operations"> * </button>
 			<button class="operations"> / </button>
+
+		</div>
+		<div id="over-top-row">
+
+			<button class="top-row"> 9 </button>
+			<button class="top-row"> 8 </button>
+			<button id="7" class="top-row" > 7 </button>
+
 		</div>
 	</body>
 </html>
